tests/substructural/check/copy_of_mut_ref.err.expected
error: at 5:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type &mut i64
   |
 5 |             s = copy r;
   |             ^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
